--- a/OnlineExamService/Views/McqExamsMVC/Index.cshtml
+++ b/OnlineExamService/Views/McqExamsMVC/Index.cshtml
@@ -66,7 +66,7 @@
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.McqExamId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.McqExamId }) |
+            @Html.ActionLink("Give Exam", "GiveExam", new { id=item.McqExamId }) |
             @Html.ActionLink("Delete", "Delete", new { id=item.McqExamId })
         </td>
     </tr>
